Fixed an issue where names wouldn't be assigned properly.

--- a/System Configuration/BTRFS Config.json
+++ b/System Configuration/BTRFS Config.json
@@ -1,1 +1,1 @@
-{"subvolumes":[{"BTRFSPhysicalLocationItem":"Subvolume","location":"file:///media/sarah/ConvergentRefuge/Convergent%20Refuge/","name":"Convergent Refuge"}],"typicalBackupLocation":"file:///media/sarah/NihilisticAutomaton/Snapshots/"}
+{"subvolumes":[{"BTRFSPhysicalLocationItem":"Subvolume","location":"file:///media/sarah/ConvergentRefuge/Convergent%20Refuge/","name":"/media/sarah/ConvergentRefuge"}],"typicalBackupLocation":"file:///media/sarah/NihilisticAutomaton/Snapshots/"}
