Improved the Snapshot format and gave Snapshot a DateTimeFormatter.

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protonmail.sarahszabo.wanderingecho</groupId>
     <artifactId>WanderingEcho</artifactId>
-    <version>0.1-Alpha</version>
+    <version>Alpha</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -79,6 +79,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
